--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
   "description": "SDK PHP para integracao com UWAY Auth (OAuth 2.0 + OpenID Connect).",
   "type": "library",
   "license": "MIT",
+  "version": "1.1.0",
   "require": {
+    "ext-curl": "*",
     "php": "^8.3"
   },
   "autoload": {
